fix overflow broken

--- a/app/sass/components/footer.scss
+++ b/app/sass/components/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    width: 100vw;
+    width: 100%;
     height: 209px;
     min-height: 209px;
     margin-top: auto;
@@ -20,8 +20,8 @@
         color: white;
         font-size: 20px;
         text-align: center;
-        width: 513px;
-        height: 46px;
+        max-width: 513px;
+        width: 100%;
         font-size: 24px;
         font-weight: 500;
         display: flex;
