--- a/app/sass/reset.scss
+++ b/app/sass/reset.scss
@@ -12,14 +12,15 @@ body {
   font-family: "Inter", sans-serif;
   min-height: 100vh;
   background-color: white;
+  overflow-x: hidden;
 }
 
 #root {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
